      zero count for \code{<NA>}, but \code{useNA = "always"} continues
      to do so.

      \item \code{summary.default()} no longer rounds, but its print
      method does, resulting in much less extraneous rounding notably of
      numbers in the ten thousands.

      \item \code{factor(x, exclude = L)} behaves more rationally when
      \code{x} or \code{L} are character vectors.

      Arithmetic between length-1 arrays
      and longer non-arrays had silently dropped the array attributes
      and recycled.  This now gives a warning and will signal an error in
      the future, as it has always for logic and comparison operations
      in these cases (e.g., compare \code{matrix(1,1) + 2:3} and
      \code{matrix(1,1) < 2:3}).
    }
  }
  \subsection{NEW FEATURES}{
    \itemize{
      \item User errors such as \code{integrate(f, 0:1, 2)} are now caught.

      \item Add \code{signature} argument to \code{debug()},
      \code{debugonce()}, \code{undebug()} and \code{isdebugged()} for
      more conveniently debugging S3 and S4 methods. Based on a patch by
      Gabe Becker.

      \item Add \code{utils::debugcall()} and
      \code{utils::undebugcall()} for debugging the function that would
      be called by evaluating the given expression. When the call is to
      an S4 generic or standard S3 generic, \code{debugcall()} debugs the
      method that would be dispatched. A number of internal utilities
      were added to support this, most notably
      \code{utils::isS3stdGeneric()}. Based on a patch by Gabe Becker.

      \item Add \code{utils::strcapture()}. Given a character vector and
      a regular expression containing capture expressions,
      \code{strcapture()} will extract the captured tokens into a
      tabular data structure, typically a \code{data.frame}.

      \item \code{str()} and \code{strOptions()} get a new option
      \code{drop.deparse.attr} with improved but \emph{changed} default